updated swagger docs for ListUsers API
